--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PORT=3000
-DB_USERNAME= ROOT,
-DB_PASSWORD= NULL,
-DB_DATABASE= DATABASE_DEVELOPMENT,
-DB_HOST= 127.0.0.1,
-DB_DIALECT= MYSQL,
-DB_PORT=5424
+DB_USERNAME= wino
+DB_PASSWORD= w1ne14fun
+DB_DATABASE= vino
+DB_HOST= localhost
+DB_DIALECT= postgers
+DB_PORT=5432
+NODE_ENV=development
