--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/cjrisua/vinomio-api#readme",
   "dependencies": {
     "@types/morgan": "^1.9.3",
+    "@types/yargs": "^17.0.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -36,7 +37,8 @@
     "sequelize": "^6.6.5",
     "sequelize-slugify": "^1.6.0",
     "short-uuid": "^4.2.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yargs": "^17.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
