--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/cjrisua/vinomio-api#readme",
   "dependencies": {
     "@types/morgan": "^1.9.3",
+    "@types/pluralize": "^0.0.29",
     "@types/yargs": "^17.0.2",
     "body-parser": "^1.19.0",
+    "camelcase": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -34,6 +36,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "pluralize": "^8.0.0",
     "sequelize": "^6.6.5",
     "sequelize-slugify": "^1.6.0",
     "short-uuid": "^4.2.0",
