--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/cjrisua/vinomio-api#readme",
   "dependencies": {
     "@types/morgan": "^1.9.3",
+    "@types/node": "^16.10.1",
     "@types/pluralize": "^0.0.29",
+    "@types/validator": "^13.6.3",
     "@types/yargs": "^17.0.2",
     "body-parser": "^1.19.0",
     "camelcase": "^6.2.0",
@@ -33,6 +35,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "joi": "^17.4.2",
+    "joi-to-typescript": "^2.2.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
