--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "tsc & node .",
     "dev": "tsc -w & nodemon .",
+    "seeder": "tsc & node ./common/seeder/seeder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -42,6 +43,8 @@
     "pg-hstore": "^2.3.4",
     "pluralize": "^8.0.0",
     "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0",
+    "sequelize-cli-typescript": "^3.2.0-c",
     "sequelize-slugify": "^1.6.0",
     "short-uuid": "^4.2.0",
     "winston": "^3.3.3",
