mongo db integration

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ scaffold.js
 .env_mac
 /docker/kafka-connect-jdbc/*
 docker/kafka-connect-jdbc.tar
+.env_mac
+/docker/debezium-jdbc-es/kafka-connect-jdbc/*
