--- a/docker/debezium-jdbc-es/Dockerfile
+++ b/docker/debezium-jdbc-es/Dockerfile
@@ -26,3 +26,4 @@ RUN mkdir $KAFKA_CONNECT_ES_DIR && cd $KAFKA_CONNECT_ES_DIR &&\
         curl -sO https://repo1.maven.org/maven2/org/apache/httpcomponents/httpcore/4.4.4/httpcore-4.4.4.jar && \
         curl -sO https://repo1.maven.org/maven2/io/searchbox/jest-common/6.3.1/jest-common-6.3.1.jar && \
         curl -sO https://repo1.maven.org/maven2/com/google/code/gson/gson/2.8.6/gson-2.8.6.jar
+COPY ./kafka-connect-jdbc/* $KAFKA_CONNECT_JDBC_DIR
