--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -56,3 +56,60 @@ services:
      - CONFIG_STORAGE_TOPIC=my_connect_configs
      - OFFSET_STORAGE_TOPIC=my_connect_offsets
      - STATUS_STORAGE_TOPIC=my_source_connect_statuses
+  mongodb1:
+    image: mongo:4
+    restart: always
+    container_name: mongodb1
+    volumes:
+      - mongodata1:/data/db
+    expose:
+      - "27017"
+    entrypoint: [ "/usr/bin/mongod", "--replSet", "rsmongo", "--bind_ip_all", "--wiredTigerCacheSizeGB", "1"]
+  mongodb2:
+        image: mongo:4
+        restart: always
+        container_name: mongodb2
+        volumes:
+        - mongodata2:/data/db
+        expose:
+        - "27017"
+        entrypoint: [ "/usr/bin/mongod", "--replSet", "rsmongo", "--bind_ip_all", "--wiredTigerCacheSizeGB", "1"]
+  mongodb3:
+        image: mongo:4
+        restart: always
+        container_name: mongodb3
+        volumes:
+        - mongodata3:/data/db
+        expose:
+        - "27017"
+        entrypoint: [ "/usr/bin/mongod", "--replSet", "rsmongo", "--bind_ip_all", "--wiredTigerCacheSizeGB", "1" ]
+  mongosetup:
+        image: "mongo-setup"
+        build: "./mongo-setup"
+        container_name: "mongosetup"
+        depends_on:
+            - mongodb1
+        volumes:
+            - mongostatus:/data/
+  mongoworker:
+    image: vinomioworker
+    container_name: "mongo-worker"
+
+  vinomio:
+    image: vinomioapi
+    environment:
+      NODE_ENV: development
+    ports:
+      - 3000:3000
+    links:
+      - postgres
+    depends_on:
+      - postgres
+
+    
+
+volumes:
+    mongodata1:
+    mongodata2:
+    mongodata3:
+    mongostatus:
