--- a/package.json
+++ b/package.json
@@ -49,7 +49,12 @@
     "short-uuid": "^4.2.0",
     "slugify": "^1.6.1",
     "winston": "^3.3.3",
-    "yargs": "^17.1.1"
+    "yargs": "^17.1.1",
+    "@types/express": "^4.17.13",
+    "@types/sequelize": "^4.28.10",
+    "source-map-support": "^0.5.20",
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
