--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     image: confluentinc/cp-schema-registry:6.2.0
     hostname: schema-registry
     ports:
-      - 8081:8081
+      - 8181:8181
     depends_on:
       - zookeeper
       - kafka
@@ -48,7 +48,7 @@ services:
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka:9092
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
-      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8181
 
   elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
@@ -136,7 +136,7 @@ services:
   vinomiostream:
     image: vinomiostream
     build:
-      context: ./vinomio-streamer
+      context: ./vinomio.event
       dockerfile: Dockerfile
     ports:
       - 7000:7000
