--- a/package.json
+++ b/package.json
@@ -25,19 +25,26 @@
   },
   "homepage": "https://github.com/cjrisua/vinomio-api#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.10.1",
     "@types/pluralize": "^0.0.29",
+    "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.6.3",
     "@types/yargs": "^17.0.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "camelcase": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.14.0",
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "joi-to-typescript": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
@@ -46,15 +53,14 @@
     "sequelize-cli": "^6.2.0",
     "sequelize-cli-typescript": "^3.2.0-c",
     "sequelize-slugify": "^1.6.0",
+    "sequelize-typescript": "^2.1.1",
     "short-uuid": "^4.2.0",
     "slugify": "^1.6.1",
-    "winston": "^3.3.3",
-    "yargs": "^17.1.1",
-    "@types/express": "^4.17.13",
-    "@types/sequelize": "^4.28.10",
     "source-map-support": "^0.5.20",
     "tslint": "^6.1.3",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "winston": "^3.3.3",
+    "yargs": "^17.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
